[tool.poetry]
name = "vllm-client"
version = "0.1.0"
description = ""
authors = ["KKobuszewski <konrad.kobuszewski93@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
pandas = "^2.2.3"
uvicorn = "^0.34.0"
plotly = "^5.24.1"
fastapi = "^0.115.6"
dash = "^2.18.2"
dash-html-components = "^2.0.0"
dash-bootstrap-components = "^1.6.0"
notebook = "^7.3.2"
webdriver-manager = "^4.0.2"
selenium = "^4.28.1"
matplotlib = "^3.10.0"
openai = "^1.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
